# Cpp-Learning-Journey

./: .gitignore  CMakeLists_Documentation.md  LICENSE  README.md  git_commandInfo.txt  test.diff
.github/workflows/: c-cpp.yml
10th_arrays/: CMakeLists.txt  Main
12th_Interface/: Main
12th_Interface/src/: Main.cpp
13th_SetterGetter/: Main  cmake_install.cmake
14th_Arrays/: Makefile
14th_Arrays/src/: Main.cpp
15th_strings/header/: Main.h
15th_strings/src/: Main.cpp
16th_const/: Main  Makefile  cmake_install.cmake
16th_const/src/: Main.cpp
17th_constClassAndFunc/: CMakeLists.txt  Main  Makefile
18th_SizeOf/: Main  Makefile  cmake_install.cmake
18th_SizeOf/src/: Main.cpp
19th_Initializerslist/: Main
19th_Initializerslist/src/: Main.cpp
1_Basics/Macros/: CMakeLists.txt  Learnings.md
1_Basics/Macros/header/: Macros.h
1_Basics/Macros/src/: Main.cpp
1_Basics/Macros/src/DLLs/Macros/: Macros.cpp
1_Basics/static_classes/: CMakeLists.txt  Static_Learnings.md
1st_Logger/: Makefile  cmake_install.cmake
1st_Logger/header/: Log.h
1st_Logger/src/: Log.cpp
20th_ternaryOperators/: Main  cmake_install.cmake
21st_ImplicitExplicitKeyWord/: Makefile  cmake_install.cmake
21st_ImplicitExplicitKeyWord/src/: Main.cpp
22nd_OperatorsAndOperatorOverloading/: cmake_install.cmake
23rd_thisPointer/: CMakeLists.txt  cmake_install.cmake
23rd_thisPointer/src/: Main.cpp
24th_ObjectLifetime/: CMakeLists.txt  Main  Makefile  cmake_install.cmake
24th_ObjectLifetime/src/: Main.cpp  ScopePointer.cpp
25th_SmartPointers/: CMakeLists.txt  Makefile
25th_SmartPointers/src/: Main.cpp
26th_ownString/: CMakeLists.txt  Makefile  cmake_install.cmake
27th_CopyConstructor/: cmake_install.cmake
28th_Arrow_Operator/: CMakeLists.txt  Main  cmake_install.cmake
28th_Arrow_Operator/src/: Main.cpp
29th_DynamicArrays/: Main  Makefile
29th_DynamicArrays/src/: Main.cpp
2_OOP_Fundamentals/const_class_and_functions/: CMakeLists.txt_backup
2_OOP_Fundamentals/constructors_destructors/: ConstructorDestructor_Learnings.md
2nd_Class/: Makefile  cmake_install.cmake
30th_localStatic/: Main
31st_staticLib/: cmake_install.cmake
32nd_sharedLib/: Makefile  cmake_install.cmake
33rd_MultipleReturnValues/header/: ReturnWithPair.h  ReturnWithPassByReference.h  ReturnWithStructAndClass.h  ReturnWithVectorAndArray.h
33rd_MultipleReturnValues/src/: Main.cpp
3_Advanced_OOP/virtual_functions_pointers/: CMakeLists.txt
3rd_Class/: Makefile  cmake_install.cmake
4_Memory_Management/arrays_advanced/: CMakeLists.txt
4_Memory_Management/local_static_variables/: LocalStatic_Learnings.md
4th_staticClass/: Makefile  cmake_install.cmake
4th_staticClass/src/: Main.cpp
5_Advanced_Topics/FunctionPointers/: CMakeLists.txt
5_Advanced_Topics/FunctionPointers/include/: FunctionPointers.h  Main.h
5_Advanced_Topics/FunctionPointers/src/: Main.cpp
5_Advanced_Topics/Templates/: CMakeLists.txt  Learnings.md  Learnings.txt
5_Advanced_Topics/Templates/header/: Templates.h  TemplatesWithClass.h
5_Advanced_Topics/Templates/src/: Main.cpp
5_Advanced_Topics/Templates/src/DLLs/Templates/: Templates.cpp  TemplatesWithClass.cpp
5th_enums/: CMakeLists.txt  Makefile  cmake_install.cmake
5th_enums/src/: Main.cpp
6_Libraries_and_Compilation/shared_libraries/: CMakeLists.txt
6_Libraries_and_Compilation/shared_libraries/header/: AdvancedCalculator.h  Cal.h
6_Libraries_and_Compilation/shared_libraries/src/DLLs/Calculator/: AdvancedCalculator.cpp  BasicCalculator.cpp
6_Libraries_and_Compilation/static_libraries/: CMakeLists.txt
6th_enums_Logs/: cmake_install.cmake
8th_Destructor/: Main  Makefile
9th_Inheritance/: CMakeLists.txt  Main  Makefile
FunctionPointers/: FunctionPointers_Learnings.md
advanced_classes/src/: Main.cpp
advanced_topics/const_class_and_functions/: cmake_install.cmake
advanced_topics/implicit_explicit_keywords/: Main
advanced_topics/interfaces_abstract_classes/: Makefile
advanced_topics/local_static_variables/: Makefile
advanced_topics/multiple_return_values/: CMakeLists.txt  Makefile  cmake_install.cmake
advanced_topics/multiple_return_values/header/: Multi.h
advanced_topics/operator_overloading/: Makefile
advanced_topics/sizeof_operator_usage/: CMakeLists.txt
advanced_topics/virtual_functions_pointers/: Main  Makefile  cmake_install.cmake
arrays_advanced/: cmake_install.cmake
arrays_basics/: Makefile
arrays_basics/header/: Main.h
arrays_basics/src/: Main.cpp
arrow_operator/: Makefile
const_basics/: CMakeLists.txt
constructor_initializer_list/: Makefile  cmake_install.cmake
constructors_destructors/: Main  cmake_install.cmake
copy_constructor/: Main
destructor_basics/: CMakeLists.txt
enums_with_logs/src/: Log.cpp
fundamentals/class_basics/: Main
fundamentals/enums_basics/: Main
fundamentals/enums_with_logs/: Main  Makefile
fundamentals/logger_debugging/: Main
fundamentals/static_classes/: Main
fundamentals/strings_manipulation/: Makefile
interfaces_abstract_classes/: cmake_install.cmake
libraries_and_compilation/static_libraries/: CMakeLists.txt  Main
local_static_variables/: cmake_install.cmake
logger_debugging/src/: Main.cpp
memory_management/arrays_advanced/: Main
memory_management/arrays_basics/: cmake_install.cmake
memory_management/custom_string_class/: Main
memory_management/dynamic_arrays_vectors/: cmake_install.cmake
memory_management/smart_pointers/: cmake_install.cmake
multiple_return_values/header/: ReturnWithTuple.h
oop_concepts/constructors_destructors/: Makefile
oop_concepts/copy_constructor/: Makefile
oop_concepts/destructor_basics/: cmake_install.cmake
oop_concepts/inheritance_oop/: cmake_install.cmake
oop_concepts/this_pointer_usage/: Main  Makefile
operator_overloading/: Main
setters_getters/: Makefile
setters_getters/src/: Main.cpp
shared_libraries/: Main
shared_libraries/src/: Main.cpp
smart_pointers/: Main
static_libraries/: Makefile
strings_manipulation/: Main  cmake_install.cmake
ternary_operator/: Makefile
(+28 files in other folders)
